discussion/kv_engine/177000/177000_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Move metering tests to metering bucket

Disable one of the metering test as it needs documents to
be created earlier. The unit tests will be added back later
on.

Change-Id: Ib86b88f023cf6e87cd9c9cbe7e38b55e2ec5fcc0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 12:22:56.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 12:30:16.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47303/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47303/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39755/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39755/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8214/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8214/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8313/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8313/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20427/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20427/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20775/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20775/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21415/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21415/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28808/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28808/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19649/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19649/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18543/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:25:13: error: no template named "unique_ptr" in namespace "std" [clang-diagnostic-error]
extern std::unique_ptr<cb::test::Cluster> cluster;
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18543/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:25:13:
error: no template named "unique_ptr" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18543/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17695/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
